# papersynth

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  papersynth.sh  pyproject.toml
docs/: architecture.md  modules.md
papersynth/: __init__.py  __main__.py  cli.py  config.py  embedder.py  gap_detector.py  graph.py  hypothesizer.py  models.py  retriever.py
scripts/: benchmark_50.py  diagnose.py
