[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papersynth"
version = "0.1.0"
description = "PaperSynth Agent — Literature-to-Hypothesis Pipeline for Academic Research"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "hdbscan>=0.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "click>=8.1",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
papersynth = "papersynth.cli:main"

[tool.setuptools.packages.find]
where = ["."]
